--- a/roles/leaf/tasks/main.yml
+++ b/roles/leaf/tasks/main.yml
@@ -1,284 +1,221 @@
-
-
-    - name: CONFIGURE HOSTNAME
-      nxos_config:
-        lines: hostname {{ inventory_hostname }}
-        provider: "{{ nxos_provider }}"
-
-    - name: ENABLE FEATURES
+---
+- name: VXLAN EVPN Configuration on Leaf Switches
+  hosts: leaves
+  connection: httpapi
+  gather_facts: no
+  tasks:
+    - name: Enabling necessary features
       nxos_feature:
-        feature: "{{item.feature }}"
-        provider: "{{ nxos_provider }}"
-      with_items: "{{ features }}"
+        feature: '{{ item.feature }}'
+        state: '{{ item.state }}'
+      with_items: '{{ vxlan_features }}'
 
-    - name: CONFIGURE PHYSICAL L3 INTERFACES
+    - name: Enabling EVPN overlay
+      nxos_evpn_global:
+        nv_overlay_evpn: true
+
+    - name: Creating Loopback interfaces to be used as Router-ID and VTEP-ID
       nxos_interface:
-        interface: "{{item.interface }}"
-        mode: layer3
+        name: loopback 0-1
         admin_state: up
-        provider: "{{ nxos_provider }}"
-      with_items: "{{ l3_interfaces }}"
+      ignore_errors: yes
 
-    - name: CONFIGURE LOOPBACK INTERFACES
+    - name: Assigning IP Addresses to the Loopback interfaces
+      nxos_l3_interface:
+        name: '{{ item.name }}'
+        ipv4: '{{ item.ipv4 }}'
+      with_items: '{{ loopback_ip }}'
+
+    - name: Configuring Spine Facing Interfaces as L3 and with Jumbo MTU
       nxos_interface:
-        interface: "{{ item.interface }}"
-        provider: "{{ nxos_provider }}"
-      with_items: "{{ loopbacks }}"
+        name: '{{item.name}}'
+        mode: layer3
+        mtu: '9216'
+        admin_state: up
+      with_items: '{{ spine_facing_ifaces }}'
 
-    - name: CONFIGURE INTERFACE IP ADDR
-      nxos_ip_interface:
-        interface: "{{ item.interface }}"
-        addr: "{{ item.addr }}"
-        mask: "{{ item.mask }}"
-        provider: "{{ nxos_provider }}"
-      with_items: 
-      - "{{ loopbacks }}"
-
-    - name: CHANGE INTERFACE MTU TO 9216
-      nxos_mtu: 
-        mtu: 9216
-        interface: "{{ item.interface }}"
-        state: present
-        provider: "{{ nxos_provider }}"
-      with_items: "{{ l3_interfaces }}"
-
-    - name: CONFIGURE INTERFACE IP UNNUMBERED
+    - name: Configuring Spine Facing interfaces with IP Unnumbered Parameters
       nxos_config:
-        lines: 
+        lines:
           - medium p2p
           - ip unnumbered loopback 0
         parents:
-          - 'interface {{ item.interface }}'
-        provider: "{{ nxos_provider  }}"
-      with_items: "{{ l3_interfaces }}"
+          - 'interface {{item.name}}'
+      with_items: '{{ spine_facing_ifaces }}'
 
-    - name: CONFIGURE OSPF PROCESS ID AND AREA AND ROUTER ID
+    - name: Creating OSPF Process 'UNDERLAY'
       nxos_ospf_vrf:
-        ospf: "{{ ospf_process_id }}"
-        router_id: "{{ router_id }}"
-        provider: "{{ nxos_provider }}"
+        ospf: UNDERLAY
+        router_id: '{{ router_id }}'
 
-    - name: ASSOCIATE INTERFACES WITH OSPF PROCESS
-      nxos_interface_ospf:
-        interface: "{{ item.interface }}"
-        ospf: "{{ ospf_process_id }}"
-        area: "{{ ospf_area }}"
-        provider: "{{ nxos_provider }}"
-      with_items: 
-      - "{{ l3_interfaces }}"
-      - "{{ loopbacks }}"
-
-    - name: CONFIGURE OSPF INTERFACES NETWORK P2P
+    - name: Configuring Spine Facing Interfaces as OSPF p2p interfaces
       nxos_config:
-        lines: ip ospf network point-to-point
+        lines:
+          - ip ospf network point-to-point
         parents:
-          - 'interface {{ item.interface }}'
-        provider: "{{ nxos_provider  }}"
-      with_items: "{{ l3_interfaces }}"
+          - 'interface {{ item.name }}'
+      with_items: '{{ spine_facing_ifaces }}'
 
-    - name: CONFIGURE PIM RP
+    - name: Assigning Interfaces to the OSPF Process
+      nxos_interface_ospf:
+        interface: '{{ item.name }}'
+        ospf: UNDERLAY
+        area: '0'
+      with_items:
+        - '{{ spine_facing_ifaces }}'
+        - '{{ loopback_ifaces }}'
+
+    - name: Configuring PIM RP Addresses
       nxos_pim_rp_address:
-        rp_address: "{{ rp_address }}"
-        provider: "{{ nxos_provider }}"
-
-    - name: CONFIGURE PIM INTERFACES
-      nxos_pim_interface:
-        interface: "{{ item.interface }}"
-        sparse: true
-        provider: "{{ nxos_provider }}"
-      with_items: "{{ l3_interfaces }}"
-
-    - name: ENABLE NV OVERLAY EVPN
-      nxos_evpn_global:
-        nv_overlay_evpn: true
-        provider: "{{ nxos_provider }}"
-
-    - name: CONFIGURE BGP ASN AND ROUTER ID
-      nxos_bgp:
-        asn: "{{ asn }}"
-        router_id: "{{ router_id }}"
-        provider: "{{ nxos_provider }}"
+        rp_address: '{{ rp_address }}'
         state: present
 
-    - name: CONFIGURE BGP NEIGHBORS
-      nxos_bgp_neighbor:
-        asn: "{{ asn }}"
-        neighbor: "{{ item.neighbor }}"
-        remote_as: "{{ item.remote_as }}"
-        update_source: "{{ item.update_source }}"
-        provider: "{{ nxos_provider }}"
-      with_items: "{{ bgp_neighbors }}"
+    - name: Configuring PIM Sparse Mode on L3 interfaces
+      nxos_pim_interface:
+        interface: '{{ item.name }}'
+        sparse: yes
+      with_items:
+        -  '{{ spine_facing_ifaces}}'
+        -  '{{ loopback_ifaces }}'
 
-    - name: CONFIGURE L2VPN EVPN ADDRESS FAMILY FOR BGP NEIGHBORS
+    - name: Creating BGP Process
+      nxos_bgp:
+        asn: '64520'
+        router_id: '{{ router_id }}'
+        state: present
+
+    - name: Configuring Spines as BGP Neighbors
+      nxos_bgp_neighbor:
+        asn: '64520'
+        neighbor: '{{ item.neighbor }}'
+        remote_as: '64520'
+        update_source: Loopback0
+      with_items: '{{ bgp_spine_neighbors }}'
+
+    - name: Enabling L2VPN EVPN Address-Family Parameters For Spine Neighbors
       nxos_bgp_neighbor_af:
-        asn: "{{ asn }}"
-        neighbor: "{{ item.neighbor }}"
+        asn: '64520'
+        neighbor: '{{ item.neighbor }}'
         afi: l2vpn
         safi: evpn
         send_community: both
-        route_reflector_client: "false"
-        provider: "{{ nxos_provider }}"
-      with_items: "{{ bgp_neighbors }}"
-
-    - name: CONFIGURE VLAN TO VNI MAPPING
-      nxos_vlan:
-        vlan_id: "{{ item.vlan_id }}"
-        mapped_vni: "{{ item.vni_id }}"
-        provider: "{{ nxos_provider }}"
-      with_items: 
-      - "{{ vlans_l2vni }}"
-      - "{{ vlans_l3vni }}"
-
-    - name: CONFIGURE L2 INTERFACES/SWITCHPORTS
-      nxos_interface:
-        interface: "{{ item.interface }}"
-        mode: layer2
-        admin_state: up
-        provider: "{{ nxos_provider }}"
-      with_items: "{{ l2_interfaces }}"
-
-    - name: CONFIGURE L2 INTERFACES/SWITCHPORTS (TRUNKS)
-      nxos_switchport:
-        interface: "{{ item.interface }}"
-        mode: trunk
-        trunk_vlans: 10-15,20-25,30-35,40-45,50-55
-        provider: "{{ nxos_provider }}"
-      with_items: "{{ l2_interfaces }}"
-
-   # - name: CONFIGURE L2 INTERFACES/SWITCHPORTS (ACCESS)
-   #   nxos_switchport:
-   #     interface: "{{ item.interface }}"
-   #     mode: access
-   #     access_vlans: 11
-   #     provider: "{{ nxos_provider }}"
-   #   with_items: "{{ l2_interfaces }}"
-    
-    - name: CONFIGURE TENANT VRFs
-      nxos_vrf:
-        vrf: "{{ item.vrf }}"
-        vni: "{{ item.vni_id }}"
-        rd: auto
         state: present
-        provider: "{{ nxos_provider }}"
-      with_items: "{{ vrfs }}"
+      with_items: '{{ bgp_spine_neighbors }}'
 
-    - name: CONFIGURE TENANT VRFs (cont'd)
-      nxos_vrf_af:
-        vrf: "{{ item.vrf }}"
+    - name: Enabling IPv4 Unicast Address-Family Parameters For Spine Neighbors
+      nxos_bgp_neighbor_af:
+        asn: '64520'
+        neighbor: '{{ item.neighbor }}'
         afi: ipv4
         safi: unicast
-        route_target_both_auto_evpn: true
+        send_community: both
+        route_reflector_client: yes
         state: present
-        m_facts: true
-        provider: "{{ nxos_provider }}"
-      with_items: "{{ vrfs }}"
+      with_items: '{{ bgp_spine_neighbors }}'
 
-    - name: CONFIGURE VXLAN VTEP NVE INTERFACE
-      nxos_interface: 
+    - name: Creating VLANs and Mapping Them to VXLAN VNIs
+      nxos_vlan:
+        vlan_id: '{{ item.vlan_id }}'
+        name: '{{ item.name }}'
+        mapped_vni: '{{ item.mapped_vni }}'
+      with_items: '{{ tenant_a_vlan_to_vni }}'
+
+    - name: Creating Tenant VRF and Mapping it to L3VNI
+      nxos_vrf:
+        name: '{{ item.name }}'
+        vni: '{{ item.vni }}'
+        rd: auto
+        state: present
+      with_items: '{{ tenant_a_vrf_config }}'
+
+    - name: Configuring AF specific settings for Tenant VRF
+      nxos_vrf_af:
+        vrf: '{{ item.name }}'
+        afi: ipv4
+        route_target_both_auto_evpn: yes
+      with_items: '{{ tenant_a_vrf_config }}'
+
+    - name: Creating VXLAN Tunnel Interface
+      nxos_interface:
         interface: nve1
         state: present
         admin_state: up
-        provider: "{{ nxos_provider }}"
 
-    - name: CONFIGURE VXLAN VTEP NVE INTERFACE FOR EVPN CONTROL PLANE
+    - name: Configuring VXLAN Tunnel Interface for MP-BGP EVPN Control Plane
       nxos_vxlan_vtep:
         interface: nve1
-        host_reachability: "true"
-        source_interface: Loopback0
-        provider: "{{ nxos_provider }}"
+        host_reachability: yes
+        source_interface: loopback1
 
-    - name: CONFIGURE VXLAN VTEP NVE INTERFACE L2VNI MAPPING
+    - name: Adding L2 VNIs to VXLAN Tunnel Interface
       nxos_vxlan_vtep_vni:
         interface: nve1
-        vni: "{{ item.vni_id }}"
-        #ingress_replication: bgp
-        multicast_group: "{{ item.mcast_grp }}"
-        suppress_arp: true
-        provider: "{{ nxos_provider }}"
-      with_items: "{{ vlans_l2vni }}"
+        vni: '{{ item.vni }}'
+        multicast_group: '{{ item.mcast_grp }}'
+        suppress_arp: no
+      with_items: '{{ tenant_a_l2_vni }}'
 
-    - name: CONFIGURE VXLAN VTEP NVE INTERFACE L3VNI MAPPING
+    - name: Adding L3 VNI to VXLAN Tunnel Interfaces
       nxos_vxlan_vtep_vni:
         interface: nve1
-        vni: "{{ item.vni_id }}"
-        assoc_vrf: "true"
-        provider: "{{ nxos_provider }}"
-      with_items: "{{ vlans_l3vni }}"
+        vni: '{{ item.vni }}'
+        assoc_vrf: yes
+      with_items: '{{ tenant_a_l3_vni }}'
 
-    #- name: ENABLE VXLAN VTEP NVE INTERFACE
-    #  nxos_interface:
-    #    interface: nve1
-    #    state: present
-    #    admin_state: up
-    #    provider: "{{ nxos_provider }}"
-
-    - name: CONFIGURE L2 EVPN VRFs
+    - name: Configuring L2 VNIs for EVPN
       nxos_evpn_vni:
-        vni: "{{ item.vni_id }}"
+        vni: '{{ item.vni }}'
         route_distinguisher: auto
         route_target_both: auto
-        provider: "{{ nxos_provider }}"
-      with_items: "{{ vlans_l2vni }}"
+      with_items: '{{ tenant_a_l2_vni }}'
 
-    - name: CONFIGURE TENANT VRFs UNDER BGP PROCESS
+    - name: Adding Tenant VRF Under BGP configuration
       nxos_bgp_af:
-        asn: "{{ asn }}"
-        vrf: "{{ item.vrf }}"
-        afi: "{{ item.afi }}"
-        safi: "{{ item.safi }}"
-        advertise_l2vpn_evpn: "true"
-        provider: "{{ nxos_provider }}"
-      with_items: "{{ vrfs }}"
+        asn: '64520'
+        vrf: '{{ item.name }}'
+        afi: '{{ item.afi }}'
+        safi: '{{ item.safi }}'
+      with_items: '{{ tenant_a_vrf_config }}'
 
-    - name: CONFIGURE ANYCAST GW MAC
+    - name: Configuring Distributed Anycast Gateway MAC Address on Leaves
       nxos_config:
-        lines: fabric forwarding anycast-gateway-mac 1234.5678.9000
-        provider: "{{ nxos_provider  }}"
-      with_items: "{{ l3_interfaces }}"        
+        lines:
+          - fabric forwarding anycast-gateway-mac 0000.0000.000A
 
-    - name: CONFIGURE SVIs THAT ARE MAPPED TO VNIs
+    - name: Creating SVIs Corresponding to VNIs
       nxos_interface:
-        interface: "vlan{{ item.vlan_id }}"
+        name: 'vlan {{ item.vlan_id }}'
         admin_state: up
-        provider: "{{ nxos_provider }}"
-      with_items: 
-      - "{{ vlans_l2vni }}"
-      - "{{ vlans_l3vni }}"
+      with_items:
+        - '{{ l2_vni_svi_list }}'
+        - '{{ l3_vni_svi_list }}'
 
-    - name: ASSOCIATE INTERFACES TO TENANT VRF
+    - name: Adding SVIs to Tenant VRF
       nxos_vrf_interface:
-        vrf: "{{ item.vrf }}"
-        interface: "vlan{{ item.vlan_id }}"
-        provider: "{{ nxos_provider }}"
-      with_items: 
-      - "{{ vlans_l2vni }}"
-      - "{{ vlans_l3vni }}"
+        vrf: '{{ item.vrf }}'
+        interface: 'vlan {{ item.vlan_id }}'
+      with_items:
+        - '{{ l2_vni_svi_list }}'
+        - '{{ l3_vni_svi_list }}'
 
-    - name: ENABLE ANYCAST GW UNDER L2VNI SVI
-      nxos_interface:
-        interface: "vlan{{ item.vlan_id }}"
-        fabric_forwarding_anycast_gateway: true
-        provider: "{{ nxos_provider }}"
-      with_items: "{{ vlans_l2vni }}"
+    - name: Configuring L2 VNI SVIs with IP addresses
+      nxos_l3_interface:
+        name: 'vlan {{ item.vlan_id }}'
+        ipv4: '{{ item.ip }}'
+      with_items: '{{l2_vni_svi_list }}'
 
-    - name: CONFIGURE IP FORWARD UNDER L3VNI SVI
+    - name: Enabling Anycast Gateway on L2VNI SVIs
       nxos_interface:
-        interface: "vlan{{ item.vlan_id }}"
+        interface: 'vlan {{ item.vlan_id }}'
+        fabric_forwarding_anycast_gateway: yes
+      with_items: '{{ l2_vni_svi_list }}'
+
+    - name: Configuring L3VNI SVI with 'ip forward'
+      nxos_interface:
+        interface: 'vlan {{ item.vlan_id }}'
         ip_forward: enable
-        provider: "{{ nxos_provider }}"
-      with_items: "{{ vlans_l3vni }}"
+      with_items: '{{ l3_vni_svi_list }}'
 
-    - name: CONFIGURE IP ADDRESS TO L2VNI SVI
-      nxos_ip_interface:
-        interface: "vlan{{ item.vlan_id }}"
-        addr: "{{ item.addr }}"
-        mask: "{{ item.mask }}"
-        provider: "{{ nxos_provider }}"
-      with_items: "{{ vlans_l2vni }}"
-
-    - name: SAVE RUN CONFIG TO STARTUP CONFIG
+    - name: Saving Configuration
       nxos_config:
-        save: yes
-        provider: "{{ nxos_provider }}"
-
-
+        save_when: changed
