--- a/host_vars/spine-2.yml
+++ b/host_vars/spine-2.yml
@@ -1,7 +1,11 @@
 ---
 
-router_id: 10.201.1.2
+loopback_ip:
+    - name: Loopback0
+      ipv4: 10.201.1.2/32
+    - name: Loopback1
+      ipv4: 1.2.3.4/32
 
-loopbacks:
-  - { interface: loopback0, addr: 10.201.1.2, mask: 32 }
-  - { interface: loopback1, addr: 1.2.3.4, mask: 32 }
+# OSPF/BGP Router-ID
+
+router_id: 10.201.1.2
