--- a/roles/spine/tasks/main.yml
+++ b/roles/spine/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: VXLAN EVPN Configuration on Spine Switches
-  hosts: spines
+  #hosts: spines
   connection: httpapi
   gather_facts: no
   tasks:
