--- a/roles/spine/tasks/main.yml
+++ b/roles/spine/tasks/main.yml
@@ -1,3 +1,8 @@
+- name: Display all variables/facts known for a host
+  debug:
+    var: hostvars[inventory_hostname]
+    verbosity: 4
+
 # - name: Enabling necessary features
 #   nxos_feature:
 #     feature: '{{ item.feature }}'
