--- a/roles/leaf/tasks/main.yml
+++ b/roles/leaf/tasks/main.yml
@@ -1,27 +1,27 @@
 - name: Enabling necessary features
-  cisco.nxos.nxos_feature:
+  nxos_feature:
     feature: '{{ item.feature }}'
     state: '{{ item.state }}'
   with_items: '{{ vxlan_features }}'
 
 - name: Enabling EVPN overlay
-  cisco.nxos.nxos_evpn_global:
+  nxos_evpn_global:
     nv_overlay_evpn: true
 
 - name: Creating Loopback interfaces to be used as Router-ID and VTEP-ID
-  cisco.nxos.nxos_interface:
+  nxos_interface:
     name: loopback 0-1
     admin_state: up
   ignore_errors: yes
 
 - name: Assigning IP Addresses to the Loopback interfaces
-  cisco.nxos.nxos_l3_interface:
+  nxos_l3_interface:
     name: '{{ item.name }}'
     ipv4: '{{ item.ipv4 }}'
   with_items: '{{ loopback_ip }}'
 
 - name: Configuring Spine Facing Interfaces as L3 and with Jumbo MTU
-  cisco.nxos.nxos_interface:
+  nxos_interface:
     name: '{{item.name}}'
     mode: layer3
     mtu: '9216'
@@ -29,7 +29,7 @@
   with_items: '{{ spine_facing_ifaces }}'
 
 - name: Configuring Spine Facing interfaces with IP Unnumbered Parameters
-  cisco.nxos.nxos_config:
+  nxos_config:
     lines:
       - medium p2p
       - ip unnumbered loopback 0
@@ -38,12 +38,12 @@
   with_items: '{{ spine_facing_ifaces }}'
 
 - name: Creating OSPF Process 'UNDERLAY'
-  cisco.nxos.nxos_ospf_vrf:
+  nxos_ospf_vrf:
     ospf: UNDERLAY
     router_id: '{{ router_id }}'
 
 - name: Configuring Spine Facing Interfaces as OSPF p2p interfaces
-  cisco.nxos.nxos_config:
+  nxos_config:
     lines:
       - ip ospf network point-to-point
     parents:
@@ -51,7 +51,7 @@
   with_items: '{{ spine_facing_ifaces }}'
 
 - name: Assigning Interfaces to the OSPF Process
-  cisco.nxos.nxos_interface_ospf:
+  nxos_interface_ospf:
     interface: '{{ item.name }}'
     ospf: UNDERLAY
     area: '0'
@@ -60,12 +60,12 @@
     - '{{ loopback_ifaces }}'
 
 - name: Configuring PIM RP Addresses
-  cisco.nxos.nxos_pim_rp_address:
+  nxos_pim_rp_address:
     rp_address: '{{ rp_address }}'
     state: present
 
 - name: Configuring PIM Sparse Mode on L3 interfaces
-  cisco.nxos.nxos_pim_interface:
+  nxos_pim_interface:
     interface: '{{ item.name }}'
     sparse: yes
   with_items:
@@ -73,13 +73,13 @@
     -  '{{ loopback_ifaces }}'
 
 - name: Creating BGP Process
-  cisco.nxos.nxos_bgp:
+  nxos_bgp:
     asn: '64520'
     router_id: '{{ router_id }}'
     state: present
 
 - name: Configuring Spines as BGP Neighbors
-  cisco.nxos.nxos_bgp_neighbor:
+  nxos_bgp_neighbor:
     asn: '64520'
     neighbor: '{{ item.neighbor }}'
     remote_as: '64520'
@@ -87,7 +87,7 @@
   with_items: '{{ bgp_spine_neighbors }}'
 
 - name: Enabling L2VPN EVPN Address-Family Parameters For Spine Neighbors
-  cisco.nxos.nxos_bgp_neighbor_af:
+  nxos_bgp_neighbor_af:
     asn: '64520'
     neighbor: '{{ item.neighbor }}'
     afi: l2vpn
@@ -97,7 +97,7 @@
   with_items: '{{ bgp_spine_neighbors }}'
 
 - name: Enabling IPv4 Unicast Address-Family Parameters For Spine Neighbors
-  cisco.nxos.nxos_bgp_neighbor_af:
+  nxos_bgp_neighbor_af:
     asn: '64520'
     neighbor: '{{ item.neighbor }}'
     afi: ipv4
@@ -108,14 +108,14 @@
   with_items: '{{ bgp_spine_neighbors }}'
 
 - name: Creating VLANs and Mapping Them to VXLAN VNIs
-  cisco.nxos.nxos_vlan:
+  nxos_vlan:
     vlan_id: '{{ item.vlan_id }}'
     name: '{{ item.name }}'
     mapped_vni: '{{ item.mapped_vni }}'
   with_items: '{{ tenant_a_vlan_to_vni }}'
 
 - name: Creating Tenant VRF and Mapping it to L3VNI
-  cisco.nxos.nxos_vrf:
+  nxos_vrf:
     name: '{{ item.name }}'
     vni: '{{ item.vni }}'
     rd: auto
@@ -123,26 +123,26 @@
   with_items: '{{ tenant_a_vrf_config }}'
 
 - name: Configuring AF specific settings for Tenant VRF
-  cisco.nxos.nxos_vrf_af:
+  nxos_vrf_af:
     vrf: '{{ item.name }}'
     afi: ipv4
     route_target_both_auto_evpn: yes
   with_items: '{{ tenant_a_vrf_config }}'
 
 - name: Creating VXLAN Tunnel Interface
-  cisco.nxos.nxos_interface:
+  nxos_interface:
     interface: nve1
     state: present
     admin_state: up
 
 - name: Configuring VXLAN Tunnel Interface for MP-BGP EVPN Control Plane
-  cisco.nxos.nxos_vxlan_vtep:
+  nxos_vxlan_vtep:
     interface: nve1
     host_reachability: yes
     source_interface: loopback1
 
 - name: Adding L2 VNIs to VXLAN Tunnel Interface
-  cisco.nxos.nxos_vxlan_vtep_vni:
+  nxos_vxlan_vtep_vni:
     interface: nve1
     vni: '{{ item.vni }}'
     multicast_group: '{{ item.mcast_grp }}'
@@ -150,21 +150,21 @@
   with_items: '{{ tenant_a_l2_vni }}'
 
 - name: Adding L3 VNI to VXLAN Tunnel Interfaces
-  cisco.nxos.nxos_vxlan_vtep_vni:
+  nxos_vxlan_vtep_vni:
     interface: nve1
     vni: '{{ item.vni }}'
     assoc_vrf: yes
   with_items: '{{ tenant_a_l3_vni }}'
 
 - name: Configuring L2 VNIs for EVPN
-  cisco.nxos.nxos_evpn_vni:
+  nxos_evpn_vni:
     vni: '{{ item.vni }}'
     route_distinguisher: auto
     route_target_both: auto
   with_items: '{{ tenant_a_l2_vni }}'
 
 - name: Adding Tenant VRF Under BGP configuration
-  cisco.nxos.nxos_bgp_af:
+  nxos_bgp_af:
     asn: '64520'
     vrf: '{{ item.name }}'
     afi: '{{ item.afi }}'
@@ -172,12 +172,12 @@
   with_items: '{{ tenant_a_vrf_config }}'
 
 - name: Configuring Distributed Anycast Gateway MAC Address on Leaves
-  cisco.nxos.nxos_config:
+  nxos_config:
     lines:
       - fabric forwarding anycast-gateway-mac 0000.0000.000A
 
 - name: Creating SVIs Corresponding to VNIs
-  cisco.nxos.nxos_interface:
+  nxos_interface:
     name: 'vlan {{ item.vlan_id }}'
     admin_state: up
   with_items:
@@ -185,7 +185,7 @@
     - '{{ l3_vni_svi_list }}'
 
 - name: Adding SVIs to Tenant VRF
-  cisco.nxos.nxos_vrf_interface:
+  nxos_vrf_interface:
     vrf: '{{ item.vrf }}'
     interface: 'vlan {{ item.vlan_id }}'
   with_items:
@@ -193,23 +193,23 @@
     - '{{ l3_vni_svi_list }}'
 
 - name: Configuring L2 VNI SVIs with IP addresses
-  cisco.nxos.nxos_l3_interface:
+  nxos_l3_interface:
     name: 'vlan {{ item.vlan_id }}'
     ipv4: '{{ item.ip }}'
   with_items: '{{l2_vni_svi_list }}'
 
 - name: Enabling Anycast Gateway on L2VNI SVIs
-  cisco.nxos.nxos_interface:
+  nxos_interface:
     interface: 'vlan {{ item.vlan_id }}'
     fabric_forwarding_anycast_gateway: yes
   with_items: '{{ l2_vni_svi_list }}'
 
 - name: Configuring L3VNI SVI with 'ip forward'
-  cisco.nxos.nxos_interface:
+  nxos_interface:
     interface: 'vlan {{ item.vlan_id }}'
     ip_forward: enable
   with_items: '{{ l3_vni_svi_list }}'
 
-# - name: Saving Configuration
-#   cisco.nxos.nxos_config:
-#     save_when: changed
+- name: Saving Configuration
+  nxos_config:
+    save_when: changed
