Adding troubleshooting commands

--- a/troubleshooting_commands.yml
+++ b/troubleshooting_commands.yml
@@ -1,36 +1,17 @@
 - hosts: all
+  vars:
+    commands:
+      - show version
+      - show ip route
+
   tasks:
   - name: run show version on remote devices
     cisco.nxos.nxos_command:
-      commands: show version
-    register: show_version
+      commands: "echo {{ item }}"
+    register: echo
+    with_items: {{commands}}
 
-  - name: "STDOUT - show version"
+  - name:  STDOUT - show version
     debug:
-      msg: "{{ show_version.stdout}}"
-
-  - name: run show version and check to see if output contains Cisco
-    cisco.nxos.nxos_command:
-      commands: show version
-      wait_for: result[0] contains Cisco
-
-  - name: run multiple commands on remote nodes
-    cisco.nxos.nxos_command:
-      commands:
-      - show version
-      - show interfaces
-
-  - name: run multiple commands and evaluate the output
-    cisco.nxos.nxos_command:
-      commands:
-      - show version
-      - show interfaces
-      wait_for:
-      - result[0] contains Cisco
-      - result[1] contains loopback0
-
-  - name: run commands and specify the output format
-    cisco.nxos.nxos_command:
-      commands:
-      - command: show version
-        output: json
+      msg: "{{ item.stdout}}"
+    loop: "{{ echo.results }}"
