Adding troubleshooting commands

--- a/troubleshooting_commands.yml
+++ b/troubleshooting_commands.yml
@@ -12,7 +12,7 @@
     with_items: "{{ commands }}"
 
   - name:  STDOUT - show version
-    debug:
-      msg: "{{ item.stdout}}"
-    #no_log: True
-    loop: "{{ echo.results }}"
+    # debug:
+    #   msg: "{{ item.stdout}}"
+    loop_control:
+      label: "{{ echo.results }}"
