--- a/troubleshooting_commands.yml
+++ b/troubleshooting_commands.yml
@@ -13,7 +13,7 @@
 
   - name:  STDOUT - show version
     debug: 
-      msg: ""
+      msg: " {{ item.stdout }}"
     with_items: "{{ echo.results }}"
     loop_control:
-      label: "{{ item.stdout }}"
+      label: "{{ item }}"
