Adding troubleshooting commands

--- a/troubleshooting_commands.yml
+++ b/troubleshooting_commands.yml
@@ -16,4 +16,4 @@
       msg: " {{ item.stdout }}"
     with_items: "{{ echo.results }}"
     loop_control:
-      label: "{{ item }}"
+      label: "{{ item.item }}"
