Adding troubleshooting commands

--- a/troubleshooting_commands.yml
+++ b/troubleshooting_commands.yml
@@ -15,5 +15,5 @@
     debug: 
       msg: " {{ item.stdout }}"
     with_items: "{{ echo.results }}"
-    loop_control:
-      label: "{{ item.item }}"
+    # loop_control:
+    #   label: "{{ item.item }}"
