--- a/ansible.cfg
+++ b/ansible.cfg
@@ -227,7 +227,7 @@ bin_ansible_callbacks=true
 # (string) Set the main callback used to display Ansible output. You can only have one at a time.
 # You can have many other callbacks, but just one can be in charge of stdout.
 # See :ref:`callback_plugins` for a list of available options.
-stdout_callback=unixy
+stdout_callback=yaml
 
 # (string) Set the default strategy used for plays.
 ;strategy=linear
