Adding troubleshooting commands

--- a/troubleshooting_commands.yml
+++ b/troubleshooting_commands.yml
@@ -1,68 +1,42 @@
-# - hosts: spine
-#   vars:
-#     commands:
-#       #- "show version"
-#       - "show ip route"
-#       - "show vxlan"
-#       - "show l2route evpn mac evi 10"
-#       - "show l2route evpn mac-ip evi 10"
-#       - "show bgp l2vpn evpn"
-#       - "show bgp l2vpn evpn vni-id 100010"
-#       - "show bgp l2vpn evpn neighbor"
-#       - "show bgp l2vpn evpn nei 10.201.1.1 routes"
-#       - "show ip route bgp"
-#       - "show ip bgp"
-#       - "show nve peers"
-#       - "show bgp internal nve-peer-vni"
-#       - "show interface nve 1"
-#       - "show nve vxlan-params"
-#       - "show nve internal platform interface nve1 detail"
-#       - "show nve peer detail"
-#       - "show bgp internal evi 100010"
-      
-#   tasks:
-#   - name: run show version on remote devices
-#     cisco.nxos.nxos_command:
-#       commands: "{{ item }}"
-#     ignore_errors: yes
-#     register: echo
-#     with_items: "{{ commands }}"
-
-#   - name:  STDOUT - Verificaiton Commands
-#     debug: 
-#       msg: "{{ item.stdout_lines[0] }}"
-#     with_items: "{{ echo.results }}"
-#     loop_control:
-#       label: "{{ item.item }}"
-
-- hosts: leaf
+- hosts: all
   vars:
+    filter_tags: null
     commands:
+      - command: show ip route
+        tags: l3
+      - command: show ip route
+        tags: l3
       #- "show version"
-      - "show ip route"
-      - "show vxlan"
-      - "show l2route evpn mac evi 10"
-      - "show l2route evpn mac-ip evi 10"
-      - "show bgp l2vpn evpn"
-      - "show bgp l2vpn evpn vni-id 100010"
-      - "show bgp l2vpn evpn neighbor"
-      - "show bgp l2vpn evpn nei 10.201.1.1 routes"
-      - "show ip route bgp"
-      - "show ip bgp"
-      - "show nve peers"
-      - "show bgp internal nve-peer-vni"
-      - "show interface nve 1"
-      - "show nve vxlan-params"
-      - "show nve internal platform interface nve1 detail"
-      - "show nve peer detail"
-      - "show bgp internal evi 100010"
+      # - "show ip route"
+      # - "show vxlan"
+      # - "show l2route evpn mac evi 10"
+      # - "show l2route evpn mac-ip evi 10"
+      # - "show bgp l2vpn evpn"
+      # - "show bgp l2vpn evpn vni-id 100010"
+      # - "show bgp l2vpn evpn neighbor"
+      # - "show bgp l2vpn evpn nei 10.201.1.1 routes"
+      # - "show ip route bgp"
+      # - "show ip bgp"
+      # - "show nve peers"
+      # - "show bgp internal nve-peer-vni"
+      # - "show interface nve 1"
+      # - "show nve vxlan-params"
+      # - "show nve internal platform interface nve1 detail"
+      # - "show nve peer detail"
+      # - "show bgp internal evi 100010"
 
   tasks:
-  - name: run show version on remote devices
+  - name: Filter show commands
+    set_fact:
+      commands: "{{ commands | json_query(query) }}"
+    vars:
+      query: "[?tags.contains(@, '{{ filter_tags }}')].command"
+  - name: Run show commands on remote devices
     cisco.nxos.nxos_command:
       commands: "{{ item }}"
     ignore_errors: yes
     register: echo
+    when: 
     with_items: "{{ commands }}"
 
   - name:  STDOUT - Verificaiton Commands
